WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30453
Transform transitions that used to be accelerated are no longer so
https://bugs.webkit.org/show_bug.cgi?id=30453
Summary
Transform transitions that used to be accelerated are no longer so
Simon Fraser (smfr)
Reported
2009-10-16 13:14:15 PDT
The patch in
bug 26770
broke a subset of accelerated transitions. The reason is that the transitions are started before the compositing layers are parented in some cases, which caused those transitions to be punted into software animation.
Attachments
Patch
(2.34 KB, patch)
2009-10-16 13:18 PDT
,
Simon Fraser (smfr)
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-10-16 13:18:32 PDT
Created
attachment 41315
[details]
Patch
Eric Carlson
Comment 2
2009-10-16 13:21:10 PDT
Comment on
attachment 41315
[details]
Patch r=me
Simon Fraser (smfr)
Comment 3
2009-10-16 13:33:43 PDT
http://trac.webkit.org/changeset/49692
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug