third_party/WebKit/WebCore/rendering/RenderLayerBacking.cpp
@@ -1035,10 +1035,6 @@ bool RenderLayerBacking::startAnimation(double beginTime, const Animation* anim,
     if (!hasOpacity && !hasTransform)
         return false;
     
-    // Don't start animations if we're not rooted, because we won't get the callback that the animation started.
-    if (!m_graphicsLayer->hasAncestor(compositor()->rootPlatformLayer()))
-        return false;
-
     KeyframeValueList transformVector(AnimatedPropertyWebkitTransform);
     KeyframeValueList opacityVector(AnimatedPropertyOpacity);
 
@@ -1079,10 +1075,6 @@ bool RenderLayerBacking::startTransition(double beginTime, int property, const R
 {
     bool didAnimate = false;
     ASSERT(property != cAnimateAll);
-
-    // Don't start animations if we're not rooted, because we won't get the callback that the animation started.
-    if (!m_graphicsLayer->hasAncestor(compositor()->rootPlatformLayer()))
-        return false;
 
     if (property == (int)CSSPropertyOpacity) {
         const Animation* opacityAnim = toStyle->transitionForProperty(CSSPropertyOpacity);
